<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="QueryFormViewController" customModule="Go_Map__" customModuleProvider="target">
            <connections>
                <outlet property="errorLabel" destination="wRC-ka-y2U" id="kbh-7g-a0L"/>
                <outlet property="previewButton" destination="mo3-V0-OdH" id="fRt-jL-tTi"/>
                <outlet property="stackViewBottomConstraint" destination="CgJ-iB-MwZ" id="YtM-1X-DOA"/>
                <outlet property="textView" destination="ZhF-8c-GU1" id="rpY-hH-5OJ"/>
                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
            </connections>
        </placeholder>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="m4y-xR-9QV">
                    <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                    <subviews>
                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="ZhF-8c-GU1">
                            <rect key="frame" x="0.0" y="0.0" width="414" height="709"/>
                            <accessibility key="accessibilityConfiguration" identifier="query_text_view"/>
                            <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                            <textInputTraits key="textInputTraits" autocorrectionType="no" smartQuotesType="no"/>
                        </textView>
                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wRC-ka-y2U">
                            <rect key="frame" x="0.0" y="709" width="414" height="61"/>
                            <accessibility key="accessibilityConfiguration" identifier="error_message"/>
                            <string key="text">There was an error with the query. Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipiscing pecu, sed do eiusmod tempor.</string>
                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                            <color key="textColor" red="0.87450980389999999" green="0.039215686270000001" blue="0.2156862745" alpha="1" colorSpace="calibratedRGB"/>
                            <nil key="highlightedColor"/>
                        </label>
                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mo3-V0-OdH">
                            <rect key="frame" x="0.0" y="770" width="414" height="48"/>
                            <color key="backgroundColor" systemColor="systemTealColor" red="0.35294117650000001" green="0.7843137255" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                            <accessibility key="accessibilityConfiguration" identifier="preview_button"/>
                            <constraints>
                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="48" id="Ubs-LC-T5S"/>
                            </constraints>
                            <state key="normal" title="Preview on Overpass Turbo">
                                <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            </state>
                            <connections>
                                <action selector="didTapPreviewButton" destination="-1" eventType="touchUpInside" id="iBq-Ng-WG1"/>
                            </connections>
                        </button>
                    </subviews>
                </stackView>
            </subviews>
            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
            <constraints>
                <constraint firstItem="m4y-xR-9QV" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="0jn-li-obP"/>
                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="m4y-xR-9QV" secondAttribute="trailing" id="BXb-sN-qsY"/>
                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="m4y-xR-9QV" secondAttribute="bottom" id="CgJ-iB-MwZ"/>
                <constraint firstItem="m4y-xR-9QV" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="OGX-yA-I4w"/>
            </constraints>
            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
            <point key="canvasLocation" x="139" y="106"/>
        </view>
    </objects>
</document>
